Mobile View Font Size Changes

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -501,7 +501,7 @@ and (orientation: portrait) {
     }
 
     .order-track-text-stat{
-        font-size: 1.3rem;
+        font-size: 1.3rem !important;
     }
 
     .tabs__order-img{
